[gd_scene load_steps=3 format=3 uid="uid://bqul3u8gt1esl"]

[ext_resource type="Script" uid="uid://vq0jcsgfaljr" path="res://scripts/main_menu.gd" id="1_06t4h"]
[ext_resource type="Theme" uid="uid://c5yfiv87skh1n" path="res://Themes/Main_Menu_Theme.tres" id="1_7vrkn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7vrkn")
script = ExtResource("1_06t4h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.314316, 0.314316, 0.314315, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"
alignment = 0

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"
alignment = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
alignment = 0
